added delete recipe functionality

--- a/Recipedia/Recipedia/Views/Shared/_Layout.cshtml
+++ b/Recipedia/Recipedia/Views/Shared/_Layout.cshtml
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="~/Recipedia.styles.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/css/recipes.css" />
     <link rel="stylesheet" href="~/css/navbar.css" />
+    <link rel="stylesheet" href="~/css/modals.css" />
 </head>
 <body>
     <header>
