--- a/Recipedia/Recipedia/Views/Recipes/Index.cshtml
+++ b/Recipedia/Recipedia/Views/Recipes/Index.cshtml
@@ -2,17 +2,22 @@
 
 <h2>Recipes</h2>
 
-<a asp-action="Create" class="btn">Add Recipe</a>
-
 <div class="recipe-grid">
-	@foreach(var recipe in Model)
-	{
-		<div class="recipe-card">
-			<h3>
-				<a asp-action="RecipeDetails" asp-route-id="@recipe.Id">
-					@recipe.Title
-				</a>
-			</h3>
-		</div>
-	}
+    @foreach (var recipe in Model)
+    {
+        //If no image is set, use the default
+        var imageUrl = string.IsNullOrEmpty(recipe.ImageUrl)
+        ? Url.Content("~/Images/meal-icon.png") 
+        : Url.Content(recipe.ImageUrl);
+
+        <div class="recipe-card" style="background-image: url('@imageUrl')">
+            <div class="recipe-overlay">
+                <h3>
+                    <a asp-action="RecipeDetails" asp-route-id="@recipe.Id">
+                        @recipe.Title
+                    </a>
+                </h3>
+            </div>
+        </div>
+    }
 </div>
