Refactor Home to FindRecipe, update UI and styles
Renamed HomeController and related views to FindRecipe, updated the default route and navigation to reflect the new structure. Improved the UI for recipe generation and results, added new CSS files for FindRecipe and GenerateRecipe, and updated existing styles for a more cohesive look. Added support for deleting recipes from the

--- a/Recipedia/Recipedia/Views/FindRecipe/Index.cshtml
+++ b/Recipedia/Recipedia/Views/FindRecipe/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@model IEnumerable<Recipedia.Models.WebRecipeResultDTO>?
 
-<div class="home-wrapper">
+<div class="find-recipe-wrapper">
     <div class="input-container">
         <div class="input-header">
             <h1>What's in Your Kitchen?</h1>
@@ -13,7 +13,7 @@
                     <div id="tagInput"
                          class="editable"
                          contenteditable="true"
-                         data-placeholder="Type your ingredients and press Enter to add them here"></div>
+                         data-placeholder="Type an ingredient and press [Enter] to add them here"></div>
                     <div id="tagsContainer"></div>
                 </div>
 
