--- a/Recipedia/Recipedia/Views/Shared/_Layout.cshtml
+++ b/Recipedia/Recipedia/Views/Shared/_Layout.cshtml
@@ -10,8 +10,9 @@
     <link rel="stylesheet" href="~/css/recipes.css" />
     <link rel="stylesheet" href="~/css/navbar.css" />
     <link rel="stylesheet" href="~/css/modals.css" />
-    <link rel="stylesheet" href="~/css/home.css" />
+    <link rel="stylesheet" href="~/css/FindRecipe.css" />
     <link rel="stylesheet" href="~/css/MyRecipes.css" />
+    <link rel="stylesheet" href="~/css/GenerateRecipe.css" />
     <link rel="stylesheet"
           href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -20,15 +21,18 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Syne:wght@400..800&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
         <nav class="navbar">
-            <div class="container">
+            <div class="navbar-container">
                 <a class="navbar-logo" asp-controller="Home" asp-action="Index">Recipedia</a>
                 <ul class="navbar-links">
-                    <li><a asp-controller="Home" asp-action="Index">Home</a></li>
-                    <li><a asp-controller="Recipes" asp-action="Index">Recipes</a></li>
+                    <li><a asp-controller="FindRecipe" asp-action="Index">Find Recipes</a></li>
+                    <li><a asp-controller="Recipes" asp-action="Index">My Recipes</a></li>
                     <li><a asp-controller="Recipes" asp-action="GenerateRecipe">Generate Recipe</a></li>
                 </ul>
             </div>
