--- a/Recipedia/Recipedia/wwwroot/css/MyRecipes.css
+++ b/Recipedia/Recipedia/wwwroot/css/MyRecipes.css
@@ -2,13 +2,18 @@
     height: 200px;
     display: flex;
     align-items: center;
-    background-color: #0f7a60;
+    background-color: #8faa67;
     width: 100%;
     padding: 0rem 10rem;
-   
+    font-family: Lora;
 }
 .myrecipes-header h1 {
     font-size: 3.8rem;
     color: white;
     font-weight: 600;
+}
+
+.no-recipes{
+    font-size: 1.2rem;
+    color: dimgray;
 }
