--- a/Recipedia/Recipedia/wwwroot/css/navbar.css
+++ b/Recipedia/Recipedia/wwwroot/css/navbar.css
@@ -1,12 +1,14 @@
 ﻿.navbar {
-    background-color: #333;
-    padding: 10px 20px;
+    background-color: #f8f7f2;
+    padding: 25px 170px;
+    border-bottom: 1.25px solid #e3e8e2;
 }
 
-.navbar .container {
+.navbar-container {
      display: flex;
      justify-content: space-between;
      align-items: center;
+     width: 100%;
 }
 
 .navbar-brand {
@@ -22,13 +24,34 @@
     gap: 20px;
     margin: 0;
     padding: 0;
+  
 }
 
 .navbar-links li a {
-    color: white;
+    position: relative;
+    color: #1a2727;
     text-decoration: none;
-    transition: color 0.2s ease;
+    transition: color 0.3s ease;
+    font-weight: 600;
 }
+
+
+.navbar-links li a::after {
+    content: '';
+    position: absolute;
+    left: 0;
+    bottom: -3px;
+    width: 0%;
+    height: 2px;
+    background-color: #70932d;
+    transition: width 0.1s ease;
+}
+
+
 .navbar-links li a:hover {
-    color: #ff9800;
+    color: #70932d; 
+}
+
+.navbar-links li a:hover::after {
+    width: 100%;
 }
