--- a/Recipedia/Recipedia/Views/Shared/_Layout.cshtml
+++ b/Recipedia/Recipedia/Views/Shared/_Layout.cshtml
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="~/css/FindRecipe.css" />
     <link rel="stylesheet" href="~/css/MyRecipes.css" />
     <link rel="stylesheet" href="~/css/GenerateRecipe.css" />
+    <link rel="stylesheet" href="~/css/Login.css" />
     <link rel="stylesheet"
           href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -34,6 +35,28 @@
                     <li><a asp-controller="FindRecipe" asp-action="Index">Find Recipes</a></li>
                     <li><a asp-controller="Recipes" asp-action="Index">My Recipes</a></li>
                     <li><a asp-controller="Recipes" asp-action="GenerateRecipe">Generate Recipe</a></li>
+                    @if (User.Identity?.IsAuthenticated == true)
+                    {
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown">
+                                @User.Identity.Name
+                            </a>
+                            <ul class="dropdown-menu">
+                                <li>
+                                    <form class="dropdown-item" asp-controller="Account" asp-action="Logout" method="post">
+                                        @Html.AntiForgeryToken()
+                                        <button type="submit" class="btn btn-link p-0 text-decoration-none text-dark">Logout</button>
+                                    </form>
+                                </li>
+                            </ul>
+                        </li>
+                    }
+                    else
+                    {
+                        <li class="nav-item">
+                            <a class="nav-link" asp-controller="Account" asp-action="Login">Sign In</a>
+                        </li>
+                    }
                 </ul>
             </div>
         </nav>
