--- a/Recipedia/Recipedia/wwwroot/css/FindRecipe.css
+++ b/Recipedia/Recipedia/wwwroot/css/FindRecipe.css
@@ -160,4 +160,9 @@
     margin-right: 3px;
 
 }
+.alert-success {
+    background-color: #8faa67;
+    border-color: #8faa67 !important;
+    color: #fff !important;
+}
 
