--- a/Recipedia/Recipedia/Views/Account/Login.cshtml
+++ b/Recipedia/Recipedia/Views/Account/Login.cshtml
@@ -1,15 +1,20 @@
 ﻿<div class="login-wrapper">
 	<div class="login-header">
-		<h1>Login</h1>
-		<p>Welcome back! Please enter your credentials to access your account.</p>
-	</div>
-    <form asp-controller="Account" asp-action="ExternalLogin" asp-route-returnUrl="@ViewData["ReturnUrl"]" method="post">
-        <div class="d-grid gap-2">
-            <button type="submit" name="provider" value="Google" class="btn btn-danger btn-lg">
-                <i class="fab fa-google"></i> Sign in with Google
+		<h1>Sign in</h1>
+		<p>Sign in to save your recipes.</p>
+        <form class="login-btn-container" asp-controller="Account" asp-action="ExternalLogin" asp-route-returnUrl="@ViewData["ReturnUrl"]" method="post">
+            <button type="submit" name="provider" value="Google" class="google-btn">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 48 48" width="20" height="20">
+                    <path fill="#EA4335" d="M24 9.5c3.5 0 6.1 1.5 7.5 2.8l5.5-5.5C33.5 3.5 29.1 2 24 2 14.8 2 7 7.9 4 15.9l6.9 5.4C12.3 14.8 17.6 9.5 24 9.5z" />
+                    <path fill="#34A853" d="M46.1 24.5c0-1.6-.1-3.2-.4-4.7H24v9h12.5c-.6 3.1-2.4 5.7-5.1 7.4l7.8 6c4.5-4.2 7.1-10.4 7.1-17.7z" />
+                    <path fill="#FBBC05" d="M10.9 28.3c-.6-1.6-1-3.4-1-5.3s.4-3.6 1-5.3l-6.9-5.4C2.8 16.7 2 20.3 2 24s.8 7.3 2 10.7l6.9-5.4z" />
+                    <path fill="#4285F4" d="M24 46c6.5 0 12-2.1 16-5.8l-7.8-6c-2.2 1.5-5.1 2.4-8.2 2.4-6.4 0-11.7-5.3-13.4-12.3l-6.9 5.4C7 40.1 14.8 46 24 46z" />
+                </svg> 
+                <span>Sign in with Google</span>
             </button>
-        </div>
-    </form>
+        </form>
+	</div>
+
     @if (TempData["Error"] != null)
     {
         <div class="alert alert-danger">@TempData["Error"]</div>
