--- a/Recipedia/Recipedia/Views/Shared/_Layout.cshtml
+++ b/Recipedia/Recipedia/Views/Shared/_Layout.cshtml
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="~/css/MyRecipes.css" />
     <link rel="stylesheet" href="~/css/GenerateRecipe.css" />
     <link rel="stylesheet" href="~/css/Login.css" />
+    <link rel="stylesheet" href="~/css/Home.css" />
     <link rel="stylesheet"
           href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -30,31 +31,39 @@
     <header>
         <nav class="navbar">
             <div class="navbar-container">
-                <a class="navbar-logo" asp-controller="Home" asp-action="Index">Recipedia</a>
+                <a class="navbar-logo" asp-controller="Home" asp-action="Index">
+					<img src="~/images/recipedia-logo.png" alt="Recipedia Logo" />
+                </a>
                 <ul class="navbar-links">
                     <li><a asp-controller="FindRecipe" asp-action="Index">Find Recipes</a></li>
                     <li><a asp-controller="Recipes" asp-action="Index">My Recipes</a></li>
                     <li><a asp-controller="Recipes" asp-action="GenerateRecipe">Generate Recipe</a></li>
+                </ul>
+                <ul class="navbar-links">
                     @if (User.Identity?.IsAuthenticated == true)
                     {
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown">
-                                @User.Identity.Name
-                            </a>
-                            <ul class="dropdown-menu">
-                                <li>
-                                    <form class="dropdown-item" asp-controller="Account" asp-action="Logout" method="post">
-                                        @Html.AntiForgeryToken()
-                                        <button type="submit" class="btn btn-link p-0 text-decoration-none text-dark">Logout</button>
-                                    </form>
-                                </li>
-                            </ul>
+                        <li class="profile-dropdown">
+                            <details>
+                                <summary class="sign-in-btn">
+                                    <i class="bi bi-person-fill"></i> @User.Identity.Name
+                                </summary>
+                                <ul class="dropdown-list">
+                                    <li>
+                                        <form asp-controller="Account" asp-action="Logout" method="post">
+                                            @Html.AntiForgeryToken()
+                                            <button type="submit" class="dropdown-btn">Logout</button>
+                                        </form>
+                                    </li>
+                                </ul>
+                            </details>
                         </li>
                     }
                     else
                     {
-                        <li class="nav-item">
-                            <a class="nav-link" asp-controller="Account" asp-action="Login">Sign In</a>
+                        <li>
+                            <a class="sign-in-btn" asp-controller="Account" asp-action="Login">
+                                <i class="bi bi-person-fill"></i> Sign In
+                            </a>
                         </li>
                     }
                 </ul>
