--- a/Recipedia/Recipedia/wwwroot/css/home.css
+++ b/Recipedia/Recipedia/wwwroot/css/home.css
@@ -1,1 +1,110 @@
 ﻿
+.home-background {
+    object-fit: cover;
+}
+
+.home-page-content {
+    padding: 3rem 27rem;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    
+}
+.welcome-container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.welcome-text{
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    width: 50%;
+}
+
+.welcome-container h4{
+    font-size: 1rem;
+    font-weight: 600;
+}
+.welcome-container h1{
+    font-size: 3rem;
+    font-weight: 700;
+    font-family: Lora;
+}
+.welcome-container p{
+    font-size: 1.2rem;
+    font-weight: 400;
+    color: #555;
+}
+.welcome-btn-container {
+    display: flex;
+    gap: 1rem;
+}
+.create-recipe-btn,
+.find-recipe-btn {
+    border: none;
+    background-color: #719d36;
+    padding: 0.5rem 0.8rem;
+    border-radius: 6px;
+    color: white;
+    text-decoration: none;
+    font-size: 0.9rem;
+    transition: background-color 0.2s ease;
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-weight: 500;
+}
+.find-recipe-btn:hover {
+    background-color: #b8c99b;
+    color: white;
+}
+.create-recipe-btn {
+    border: 1px solid lightgray;
+    background-color: #f8f7f2;
+    color: #555;
+}
+.create-recipe-btn:hover {
+    background-color: #e8e7e2;
+    cursor: pointer;
+    color: #555;
+}
+.about-wrapper {
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+}
+.feature-container {
+    display: flex;
+    gap: 2rem;
+ 
+   
+}
+.feature-container p{
+        font-size: 1.2rem;
+    color: #555;
+    margin-top: 5rem;
+    width: 50%;
+}
+
+.feature-container img {
+    width: 400px;
+    height: 200px;
+    object-fit: cover;
+    border-radius: 8px;
+    border: 1px solid lightgray;
+  
+}
+
+.feature-header {
+    display: flex;
+    flex-direction: column;
+    gap: 0.2rem;
+
+}
+    .feature-header h1 {
+        font-size: 1.5rem;
+        font-family: Lora;
+        font-weight: 600;
+    }
