--- a/Recipedia/Recipedia/wwwroot/css/home.css
+++ b/Recipedia/Recipedia/wwwroot/css/home.css
@@ -103,8 +103,44 @@
     gap: 0.2rem;
 
 }
-    .feature-header h1 {
-        font-size: 1.5rem;
-        font-family: Lora;
-        font-weight: 600;
-    }
+.feature-header h1 {
+    font-size: 1.5rem;
+    font-family: Lora;
+    font-weight: 600;
+}
+.footer-wrapper {
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    padding-bottom: 1rem;
+    padding-top: 0.75rem;
+    border-top: 1.25px solid #e3e8e2;
+}
+
+.footer-container {
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+    text-align: center;
+}
+.footer-container span{
+        font-size: 0.9rem;
+    color: gray;
+}
+.footer-links {
+    display: flex;
+    justify-content: center;
+    gap: 12px;
+    
+
+}
+.footer-links a{
+    text-decoration: none;
+    color: black;
+    font-size: 0.9rem;
+    font-weight: 500;
+  
+}
+.footer-links a:hover {
+    color: #76a239;
+}
