--- a/Recipedia/Recipedia/wwwroot/css/site.css
+++ b/Recipedia/Recipedia/wwwroot/css/site.css
@@ -1,6 +1,7 @@
-html {
-    font-size: 14px;
-    
+html, body {
+    margin: 0;
+    padding: 0;
+    height: 100%; 
 }
 
 @media (min-width: 768px) {
@@ -14,13 +15,14 @@ html {
   box-shadow: 0 0 0 0.1rem white, 0 0 0 0.25rem #258cfb;
 }
 
-html {
-  position: relative;
-  min-height: 100%;
-}
 
 body {
-    margin-bottom: 60px;
+    margin: 0;
     font-family: "Montserrat", sans-serif;
     background-color: #f8f7f2;
+    display: flex;
+    flex-direction: column;
+}
+main[role="main"] {
+    flex: 1 0 auto;
 }
